--- a/index.html
+++ b/index.html
@@ -2,5 +2,9 @@
 <html>
   <body>
     <h1>Under Construction</h1>
+    <img alt="Discord" src="https://img.shields.io/discord/728342390313713748?color=blue&label=Discord%20Server&logo=Discord&logoColor=blue">
+    <img alt="Reddit User Karma" src="https://img.shields.io/reddit/user-karma/combined/Splatterxl_YT?label=u%2FSplatterxl_YT%27s%20karma&style=social">
+    <img alt="GitHub package.json version (branch)" src="https://img.shields.io/github/package-json/v/Splatterxl/Utilities/master?label=Rcorp%20Utilities%20Version&logo=electron&logoColor=white">
+    <img src="https://img.shields.io/badge/Stupid-true-red">
   </body>
 </html>
