--- a/utilitybot/policy.html
+++ b/utilitybot/policy.html
@@ -2,6 +2,6 @@ Thank you for inviting UtilityBot to your server.
 
 In order to fully use the bot, you must agree to this Privacy Policy (the "Policy") and the UtilityBot Terms of Service (the "ToS"). The maintainers of this Project may update the aforementioned documents at any time and at their own discretion.
 
-The process of which you can do that is explained at the end of the ToS.
+By using the bot, you agree to this policy.
 
 Currently, UtilityBot does not collect data from its users, but we are working on local and global settings. You will be notified in your DMs when this Policy is modified.
