--- a/index.html
+++ b/index.html
@@ -6,5 +6,29 @@
     <img alt="Reddit User Karma" src="https://img.shields.io/reddit/user-karma/combined/Splatterxl_YT?label=u%2FSplatterxl_YT%27s%20karma&style=social">
     <img alt="GitHub package.json version (branch)" src="https://img.shields.io/github/package-json/v/Splatterxl/Utilities/master?label=Rcorp%20Utilities%20Version&logo=electron&logoColor=white">
     <img src="https://img.shields.io/badge/Stupid-true-red">
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyBne5DfSi7rBuC_5FSpX71aYyWg_UDFFc0",
+    authDomain: "splatterxl-github-io.firebaseapp.com",
+    databaseURL: "https://splatterxl-github-io.firebaseio.com",
+    projectId: "splatterxl-github-io",
+    storageBucket: "splatterxl-github-io.appspot.com",
+    messagingSenderId: "55415515710",
+    appId: "1:55415515710:web:4433c26df010e9ad92bf6f",
+    measurementId: "G-NK9S0ZR6RW"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
   </body>
 </html>
