--- a/index.html
+++ b/index.html
@@ -1,34 +1,65 @@
 <!DOCTYPE html>
 <html>
+
   <body>
     <h1>Under Construction</h1>
-    <img alt="Discord" src="https://img.shields.io/discord/728342390313713748?color=blue&label=Discord%20Server&logo=Discord&logoColor=blue">
-    <img alt="Reddit User Karma" src="https://img.shields.io/reddit/user-karma/combined/Splatterxl_YT?label=u%2FSplatterxl_YT%27s%20karma&style=social">
-    <img alt="GitHub package.json version (branch)" src="https://img.shields.io/github/package-json/v/Splatterxl/Utilities/master?label=Rcorp%20Utilities%20Version&logo=electron&logoColor=white">
+    <img alt="Discord"
+         src="https://img.shields.io/discord/728342390313713748?color=blue&label=Discord%20Server&logo=Discord&logoColor=blue">
+    <img alt="Reddit User Karma"
+         src="https://img.shields.io/reddit/user-karma/combined/Splatterxl_YT?label=u%2FSplatterxl_YT%27s%20karma&style=social">
+    <img alt="GitHub package.json version (branch)"
+         src="https://img.shields.io/github/package-json/v/Splatterxl/Utilities/master?label=Rcorp%20Utilities%20Version&logo=electron&logoColor=white">
     <img src="https://img.shields.io/badge/Stupid-true-red">
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
 
-<!-- TODO: Add SDKs for Firebase products that you want to use
+    <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-analytics.js"></script>
 
-<script>
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  var firebaseConfig = {
-    apiKey: "AIzaSyBne5DfSi7rBuC_5FSpX71aYyWg_UDFFc0",
-    authDomain: "splatterxl-github-io.firebaseapp.com",
-    databaseURL: "https://splatterxl-github-io.firebaseio.com",
-    projectId: "splatterxl-github-io",
-    storageBucket: "splatterxl-github-io.appspot.com",
-    messagingSenderId: "55415515710",
-    appId: "1:55415515710:web:4433c26df010e9ad92bf6f",
-    measurementId: "G-NK9S0ZR6RW"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
-</script>
+    <script>
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      var firebaseConfig = {
+        apiKey: "AIzaSyBne5DfSi7rBuC_5FSpX71aYyWg_UDFFc0",
+        authDomain: "splatterxl-github-io.firebaseapp.com",
+        databaseURL: "https://splatterxl-github-io.firebaseio.com",
+        projectId: "splatterxl-github-io",
+        storageBucket: "splatterxl-github-io.appspot.com",
+        messagingSenderId: "55415515710",
+        appId: "1:55415515710:web:4433c26df010e9ad92bf6f",
+        measurementId: "G-NK9S0ZR6RW"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+    </script>
+    <!-- Add the standard Performance Monitoring library -->
+    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-performance.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-auth.js"></script>
+
+    <script>
+      var provider = new firebase.auth.GoogleAuthProvider();
+      firebase.auth().signInWithPopup(provider).then(function (result)
+      {
+        // This gives you a Google Access Token. You can use it to access the Google API.
+        var token = result.credential.accessToken;
+        // The signed-in user info.
+        var user = result.user;
+        // ...
+      }).catch(function (error)
+      {
+        // Handle Errors here.
+        var errorCode = error.code;
+        var errorMessage = error.message;
+        // The email of the user's account used.
+        var email = error.email;
+        // The firebase.auth.AuthCredential type that was used.
+        var credential = error.credential;
+        // ...
+      });
+
+    </script>
   </body>
+
 </html>
