--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html>
 
+  <head>
+    <meta http-equiv="X-UA-Compatible"
+          content="IE=7">
+    <meta name="description"
+          content="Splatterxl#8999's Website">
+    <meta http-equiv="Content-Type"
+          content="text/html;charset=UTF-8">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0">
+    <meta name="og:title"
+          content="Splatterxl#8999's Website">
+  </head>
+
   <body>
     <h1>Under Construction</h1>
     <img alt="Discord"
@@ -38,7 +51,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-performance.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-auth.js"></script>
 
-    <script>
+    <!-- <script>
       var provider = new firebase.auth.GoogleAuthProvider();
       firebase.auth().signInWithPopup(provider).then(function (result)
       {
@@ -58,8 +71,7 @@
         var credential = error.credential;
         // ...
       });
-
-    </script>
+    </script> -->
   </body>
 
 </html>
