--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
           content="width=device-width, initial-scale=1.0">
     <meta name="og:title"
           content="Splatterxl#8999's Website">
+    <meta name='og:description'
+          content='This is the official website of Splatterxl#8999.'>
+    <meta name="og:type"
+          name="website">
   </head>
 
   <body>
