--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         // ...
       });
     </script> -->
+    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
   </body>
 
 </html>
