--- a/index.html
+++ b/index.html
@@ -19,14 +19,19 @@
   </head>
 
   <body>
-    <h1>Under Construction</h1>
-    <img alt="Discord"
-         src="https://img.shields.io/discord/728342390313713748?color=blue&label=Discord%20Server&logo=Discord&logoColor=blue">
-    <img alt="Reddit User Karma"
-         src="https://img.shields.io/reddit/user-karma/combined/Splatterxl_YT?label=u%2FSplatterxl_YT%27s%20karma&style=social">
-    <img alt="GitHub package.json version (branch)"
-         src="https://img.shields.io/github/package-json/v/Splatterxl/Utilities/master?label=Rcorp%20Utilities%20Version&logo=electron&logoColor=white">
-    <img src="https://img.shields.io/badge/Stupid-true-red">
+    <section>
+      <fieldset>
+        <legend>header text lmao</legend>
+        <h1>i am dumb</h1>
+        <nav>
+          <a href="http://github.com/Splatterxl/rcorp_files">see my latest failure</a>
+          |
+          <a href="http://splatterxl.github.io">this thing</a>
+          |
+          <a href="utilitybot">my discord bot</a>
+        </nav>
+      </fieldset>
+    </section>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
 
