--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     <section>
       <fieldset>
         <legend>header text lmao</legend>
-        <h1>i am dumb</h1>
+        <h1 id='i-am'>I am creating <element id='creating'>D</element>
+        </h1>
         <nav>
           <js-link id='projects-drop-down-button'
                    class='blurple'>Projects</js-link>
