added fonts and other things

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <link rel="stylesheet"
-          href="./base/assets/global.css">
+          href="./base/assets/css/global.css">
     <meta http-equiv="X-UA-Compatible"
           content="IE=7">
     <meta name="description"
@@ -18,9 +18,9 @@
           content='This is the official website of Splatterxl#8999.'>
     <meta name="og:type"
           name="website">
-    <script src="./base/assets/main.js"
+    <script src="./base/assets/js/main.js"
             defer></script>
-    <script src="./base/assets/theme-loader.js"
+    <script src="./base/assets/js/theme-loader.js"
             defer></script>
   </head>
 
