--- a/index.html
+++ b/index.html
@@ -49,29 +49,15 @@
         </nav>
       </fieldset>
     </section>
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
-    <script>
-      // Your web app's Firebase configuration
-      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-      var firebaseConfig = {
-        apiKey: "AIzaSyBne5DfSi7rBuC_5FSpX71aYyWg_UDFFc0",
-        authDomain: "splatterxl-github-io.firebaseapp.com",
-        databaseURL: "https://splatterxl-github-io.firebaseio.com",
-        projectId: "splatterxl-github-io",
-        storageBucket: "splatterxl-github-io.appspot.com",
-        messagingSenderId: "55415515710",
-        appId: "1:55415515710:web:4433c26df010e9ad92bf6f",
-        measurementId: "G-NK9S0ZR6RW"
-      };
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-      firebase.analytics();
-    </script>
-    <!-- Add the standard Performance Monitoring library -->
-    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-performance.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
+    <br/><br/>
+    <article>
+      <h1 class="whoami" id="whoami-header green">
+        Who Am I?
+      </h1>
+      <section class="border green" id="whoami-sect">
+        I'm a mobile coder and a Discord addict. I use <a href="https://nodejs.org">Node.js</a> and vanilla JavaScript, and I'm learning C++.
+      </section>
+    </article>
     <settings>
       <js-link id='theme-toggle'
                class='link'>Toggle Theme (current theme:
