--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         Who Am I?
       </h1>
       <section class="border green" id="whoami-sect">
-        I'm a mobile coder and a Discord addict. I use <a href="https://nodejs.org">Node.js</a> and vanilla JavaScript, and I'm learning C++.
+        I'm a mobile coder and a Discord addict. I use <a href="https://nodejs.org" class="blurple link green">Node.js</a> and vanilla JavaScript, and I'm learning C++.
       </section>
     </article>
     <settings>
