--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </section>
     <br/><br/>
     <article>
-      <h1 id="whoami" class="whoami-header green">
+      <h1 id="whoami" class="whoami-header green" style="color: green;">
         Who Am I?
       </h1>
       <section class="border green" id="whoami-sect">
