--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
         </nav>
       </fieldset>
     </section>
-    <br/><br/>
-    <article>
+    <article style="border: green 10px;">
       <h1 id="whoami" class="whoami-header green" style="color: green; text-align: center">
         Who Am I?
       </h1>
@@ -58,6 +57,7 @@
         I'm a mobile coder and a Discord addict. I use <a href="https://nodejs.org" class="blurple link green" style="color: green;">Node.js</a> and vanilla JavaScript, and I'm learning C++.
       </section>
     </article>
+    <br><br>
     <settings>
       <js-link id='theme-toggle'
                class='link'>Toggle Theme (current theme:
