--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <h1 id="whoami" class="whoami-header green" style="color: green; text-align: center">
         Who Am I?
       </h1>
-      <section class="border green" id="whoami-sect" style="text-align: center; margin-right: 25%; margin-left: 25%">
+      <section class="border" id="whoami-sect" style="text-align: center; margin-right: 25%; margin-left: 25%">
         I'm a mobile coder and a Discord addict. I use <a href="https://nodejs.org" class="blurple link green" style="color: green;">Node.js</a> and vanilla JavaScript, and I'm learning C++.
       </section>
     </article>
