--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
       <section class="border" id="whoami-sect" style="text-align: center; margin-right: 25%; margin-left: 25%">
         I'm a mobile coder and a Discord addict. I use <a href="https://nodejs.org" class="blurple link green" style="color: green;">Node.js</a> and vanilla JavaScript, and I'm learning C++.
       </section>
+      <table>
+        <tbody>
+          <td style="text-align: center; margin-right: 25%; margin-left: 25%"><b>Eureka!</b><br>I'm currently focused on my Discord bot, <a href="utilitybot" style="color: green;">Eureka!</a>. If you want to contribute to my messy code, do so <a href="https://github.com/nearlySplat/Gap_Utilities">here</a></td>
+        </tbody>
+      </table>
     </article>
     <br><br>
     <settings>
