--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </section>
       <table>
         <tbody>
-          <td style="text-align: center; margin-right: 25%; margin-left: 25%"><h2 style="color: green; text-align: center; font-size: 1em;">Eureka!</h2>I'm currently focused on my Discord bot, <a href="utilitybot" style="color: green;">Eureka!</a>. If you want to contribute to my messy code, do so <a href="https://github.com/nearlySplat/Gap_Utilities">here</a></td>
+          <td style="text-align: center; margin-right: 25%; margin-left: 25%"><h2 style="color: green; text-align: center; font-size: 1em;">Lightbulb!</h2>I'm currently focused on my Discord bot, <a href="//github.com/nearlySplat/lightbulb" style="color: green;">Lightbulb</a>.<br/></td>
         </tbody>
       </table>
     </article>
