--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <link rel="stylesheet"
-          href="./base/assets/css/global.css">
+          href="/base/assets/css/global.css">
     <meta http-equiv="X-UA-Compatible"
           content="IE=7">
     <meta name="description"
@@ -18,9 +18,9 @@
           content='This is the official website of Splatterxl#8999.'>
     <meta name="og:type"
           name="website">
-    <script src="./base/assets/js/main.js"
+    <script src="/base/assets/js/main.js"
             defer></script>
-    <script src="./base/assets/js/theme-loader.js"
+    <script src="/base/assets/js/theme-loader.js"
             defer></script>
   </head>
 
@@ -58,7 +58,8 @@
       </section>
       <table>
         <tbody>
-          <td style="text-align: center; margin-right: 25%; margin-left: 25%"><h2 style="color: green; text-align: center; font-size: 1em;">Lightbulb!</h2>I'm currently focused on my Discord bot, <a href="//github.com/nearlySplat/lightbulb" style="color: green;">Lightbulb</a>.<br/></td>
+          <td style="text-align: center; margin-right: 25%; margin-left: 25%"><h2 style="color: green; text-align: center; font-size: 1em;">Lightbulb!</h2>I'm currently focused on my Discord bot, <a href="//github.com/nearlySplat/lightbulb" style="color: green;">Lightbulb</a>.</td>
+          
         </tbody>
       </table>
     </article>
