--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         Who Am I?
       </h1>
       <section class="border" id="whoami-sect" style="text-align: center; margin-right: 25%; margin-left: 25%">
-        I'm a mobile coder and a Discord addict. I use <a href="https://nodejs.org" class="blurple link green" style="color: green;">Node.js</a> and vanilla JavaScript, and I'm learning C++.
+        I'm a mobile coder and a Discord addict. I use <a href="https://nodejs.org" class="blurple link green" style="color: green;">Node.js</a> and vanilla JavaScript, and I'm learning C#.
       </section>
       <table>
         <tbody>
