--- a/404.html
+++ b/404.html
@@ -1,10 +1,52 @@
-<h1>404 Not Found</h1>
-<h3>The selected page could not be found on the server. Bummer.</h3>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Splatterxl :: Home</title>
+    <link rel="stylesheet" href="/assets/css/global.css" />
+    <script src="https://cdn.jsdelivr.net/npm/typeit@7.0.4/dist/typeit.min.js"></script>
+    <!-- Primary Meta Tags -->
 
+    <!-- Embed previews -->
+    <meta name="title" content="Splatterxl" />
+    <meta
+      name="description"
+      content="This is my humble abode >~<. Check me and my projects out here."
+    />
 
-<br><br><br><br><br><br><br><br><br>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://splatterxl.github.io/" />
+    <meta property="og:title" content="Splatterxl" />
+    <meta
+      property="og:description"
+      content="This is my humble abode >~<. Check me and my projects out here."
+    />
 
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://splatterxl.github.io/" />
+    <meta property="twitter:title" content="Splatterxl" />
+    <meta
+      property="twitter:description"
+      content="This is my humble abode >~<. Check me and my projects out here."
+    />
 
-*Notices the panic on your face*
-<br><br>
-OwO whats this >~<
+    <!-- End of Embed Previews -->
+  </head>
+
+  <body>
+    <h2 id="prompt">root@site ~ $ <span id="prompt-text"></span></h2>
+    <div id="cmd-res">
+      <div class="title"></div>
+      <div class="copyright"></div>
+      <div class="loading"></div>
+      <br />
+      <br />
+      <div class="nocontent" hidden aria-hidden="true"></div>
+    </div>
+    <script src="/assets/js/typeit.js" type="module"></script>
+  </body>
+</html>
