--- a/index.html
+++ b/index.html
@@ -1,75 +1,56 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
   <head>
-    <link rel="stylesheet"
-          href="/base/assets/css/global.css">
-    <meta http-equiv="X-UA-Compatible"
-          content="IE=7">
-    <meta name="description"
-          content="Splatterxl#8999's Website">
-    <meta http-equiv="Content-Type"
-          content="text/html;charset=UTF-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0">
-    <meta name="og:title"
-          content="Splatterxl#8999's Website">
-    <meta name='og:description'
-          content='This is the official website of Splatterxl#8999.'>
-    <meta name="og:type"
-          name="website">
-    <script src="/base/assets/js/main.js"
-            defer></script>
-    <script src="/base/assets/js/theme-loader.js"
-            defer></script>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Splatterxl :: Home</title>
+    <link rel="stylesheet" href="/assets/css/global.css" />
+    <link rel="stylesheet" href="/assets/css/home.css" />
+    <script src="https://cdn.jsdelivr.net/npm/typeit@7.0.4/dist/typeit.min.js"></script>
+    <!-- Primary Meta Tags -->
+
+    <!-- Embed previews -->
+    <meta name="title" content="Splatterxl" />
+    <meta
+      name="description"
+      content="This is my humble abode >~<. Check me and my projects out here."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://splatterxl.github.io/" />
+    <meta property="og:title" content="Splatterxl" />
+    <meta
+      property="og:description"
+      content="This is my humble abode >~<. Check me and my projects out here."
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://splatterxl.github.io/" />
+    <meta property="twitter:title" content="Splatterxl" />
+    <meta
+      property="twitter:description"
+      content="This is my humble abode >~<. Check me and my projects out here."
+    />
+
+    <!-- End of Embed Previews -->
   </head>
 
-  <body class='whitney'>
-    <noscript>
-      <fieldset>
-        <legend>Fatal Error</legend>
-        <h1>No JavaScript detected</h1>
-        <p>Please turn on JavaScript, as the site relies heavily on it.</p>
-      </fieldset>
-    </noscript>
-    <fieldset hidden>
-      <h1>Are you using a Chromium-based browser?</h1>
-    </fieldset>
-    <section>
-      <fieldset>
-        <legend>header text lmao</legend>
-        <h1 id='i-am'>I am creating <element id='creating'>D</element>
-        </h1>
-        <nav>
-          <js-link id='projects-drop-down-button'
-                   class='blurple link'>Projects</js-link>
-          <section class="drop-down"
-                   id="projects-drop-down"></section>
-
-        </nav>
-      </fieldset>
-    </section>
-    <article style="border: green 10px;">
-      <h1 id="whoami" class="whoami-header green" style="color: green; text-align: center">
-        Who Am I?
-      </h1>
-      <section class="border" id="whoami-sect" style="text-align: center; margin-right: 25%; margin-left: 25%">
-        I'm a mobile coder and a Discord addict. I use <a href="https://nodejs.org" class="blurple link green" style="color: green;">Node.js</a> and vanilla JavaScript, and I'm learning C#.
-      </section>
-      <table>
-        <tbody>
-          <td style="text-align: center; margin-right: 25%; margin-left: 25%"><h2 style="color: green; text-align: center; font-size: 1em;">Lightbulb!</h2>I'm currently focused on my Discord bot, <a href="//github.com/nearlySplat/lightbulb" style="color: green;">Lightbulb</a>.</td>
-          
-        </tbody>
-      </table>
-    </article>
-    <br><br>
-    <settings>
-      <js-link id='theme-toggle'
-               class='link'>Toggle Theme (current theme:
-        <script>document.write(localStorage.getItem('theme'))</script>)
-      </js-link>
-    </settings>
+  <body>
+    <table>
+      <tbody>
+        <td>
+          <img src="/assets/img/avatar_circle.png" id="av" />
+        </td>
+        <td>
+          <div id="text">
+            <h1>Splatterxl</h1>
+            <p>I'm a developer. Yeah, that's it.</p>
+          </div>
+        </td>
+      </tbody>
+    </table>
   </body>
-
 </html>
