write please wait and update title

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Splatterxl :: Home</title>
+    <title>Splatterxl :: Not Found</title>
     <link rel="stylesheet" href="/assets/css/global.css" />
     <script src="https://cdn.jsdelivr.net/npm/typeit@7.0.4/dist/typeit.min.js"></script>
     <!-- Primary Meta Tags -->
@@ -43,6 +43,7 @@
       <div class="title"></div>
       <div class="copyright"></div>
       <div class="loading"></div>
+      <div class="please-wait"></div>
       <br />
       <br />
       <div class="nocontent" hidden aria-hidden="true"></div>
