feat: add navbar

--- a/index.html
+++ b/index.html
@@ -39,18 +39,14 @@
   </head>
 
   <body>
-    <table>
-      <tbody>
-        <td>
-          <img src="/assets/img/avatar_circle.png" id="av" />
-        </td>
-        <td>
-          <div id="text">
-            <h1>Splatterxl</h1>
-            <p>I'm a developer. Yeah, that's it.</p>
-          </div>
-        </td>
-      </tbody>
-    </table>
+    <div id="text">
+      <h1>Splatterxl</h1>
+      <p>
+        I'm a developer. Yeah, that's it. I develop a few things you
+        <i>might</i> use, but don't.
+      </p>
+    </div>
+    <hr />
+    <nav><a href="/">Home</a> | <a href="/blog#jvjsidndhdk">Blog</a></nav>
   </body>
 </html>
