feat: add blog and add more descriptive text in index

--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
     <!-- Primary Meta Tags -->
 
     <!-- Embed previews -->
-    <meta name="title" content="Splatterxl" />
+    <meta name="title" content="Splatterxl :: Not Found" />
     <meta
       name="description"
       content="This is my humble abode >~<. Check me and my projects out here."
@@ -19,7 +19,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://splatterxl.github.io/" />
-    <meta property="og:title" content="Splatterxl" />
+    <meta property="og:title" content="Splatterxl :: Not Found" />
     <meta
       property="og:description"
       content="This is my humble abode >~<. Check me and my projects out here."
@@ -28,7 +28,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://splatterxl.github.io/" />
-    <meta property="twitter:title" content="Splatterxl" />
+    <meta property="twitter:title" content="Splatterxl :: Not Found" />
     <meta
       property="twitter:description"
       content="This is my humble abode >~<. Check me and my projects out here."
@@ -38,7 +38,10 @@
   </head>
 
   <body>
-    <h2 id="prompt">root@site ~ $ <span id="prompt-text"></span></h2>
+    <h2 id="prompt">
+      root@site ~ $ <noscript>Please turn on JavaScript!</noscript
+      ><span id="prompt-text"></span>
+    </h2>
     <div id="cmd-res">
       <div class="title"></div>
       <div class="copyright"></div>
@@ -46,7 +49,7 @@
       <div class="please-wait"></div>
       <br />
       <br />
-      <div class="nocontent" hidden aria-hidden="true"></div>
+      <div class="nocontent"></div>
     </div>
     <script src="/assets/js/typeit.js" type="module"></script>
   </body>
