--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://splatterxl.github.io/" />
-    <meta property="og:title" content="Splatterxl" />
+    <meta property="og:title" content="Splatterxl :: Home" />
     <meta
       property="og:description"
       content="This is my humble abode >~<. Check me and my projects out here."
@@ -29,7 +29,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://splatterxl.github.io/" />
-    <meta property="twitter:title" content="Splatterxl" />
+    <meta property="twitter:title" content="Splatterxl :: Home" />
     <meta
       property="twitter:description"
       content="This is my humble abode >~<. Check me and my projects out here."
@@ -51,5 +51,19 @@
       <a href="/">Home</a> | <a href="/projects">Projects</a> |
       <a href="/blog">Blog</a>
     </nav>
+    <article>
+      <h1>Hi, I'm Splatterxl!</h1>
+      <p>
+        You may or may not have heard of me, but either way, welcome to my
+        website! Here, I plan on posting blogs (soon:tm:), interesting findings
+        about programming, and the general mayhem that is my thought process.
+        <br />
+        <br />
+        If you didn't know, I'm a teenage programmer working on a few projects
+        right now (which you can find on my
+        <a href="//github.com/nearlySplat">GitHub profile</a>), most of which
+        are <a href="//discord.com">Discord</a>-related.
+      </p>
+    </article>
   </body>
 </html>
