--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="google-site-verification" content="BontVeuP9vzHTSQjV0fvJ7hPyCkKYXB4G1xhB39YcYw" />
+    <meta
+      name="google-site-verification"
+      content="BontVeuP9vzHTSQjV0fvJ7hPyCkKYXB4G1xhB39YcYw"
+    />
     <title>Splatterxl :: Home</title>
     <link rel="stylesheet" href="/assets/css/global.css" />
     <link rel="stylesheet" href="/assets/css/home.css" />
