--- a/index.html
+++ b/index.html
@@ -4,70 +4,45 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="google-site-verification"
-      content="BontVeuP9vzHTSQjV0fvJ7hPyCkKYXB4G1xhB39YcYw"
-    />
-    <title>Splatterxl :: Home</title>
+    <title>Splatterxl's Website</title>
+
     <link rel="stylesheet" href="/assets/css/global.css" />
-    <link rel="stylesheet" href="/assets/css/home.css" />
-    <script src="https://cdn.jsdelivr.net/npm/typeit@7.0.4/dist/typeit.min.js"></script>
-    <!-- Primary Meta Tags -->
-
-    <!-- Embed previews -->
-    <meta name="title" content="Splatterxl" />
-    <meta
-      name="description"
-      content="This is my humble abode >~<. Check me and my projects out here."
-    />
-
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://splatterxl.github.io/" />
-    <meta property="og:title" content="Splatterxl :: Home" />
-    <meta
-      property="og:description"
-      content="This is my humble abode >~<. Check me and my projects out here."
-    />
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://splatterxl.github.io/" />
-    <meta property="twitter:title" content="Splatterxl :: Home" />
-    <meta
-      property="twitter:description"
-      content="This is my humble abode >~<. Check me and my projects out here."
-    />
-
-    <!-- End of Embed Previews -->
   </head>
-
   <body>
-    <div id="text">
+    <header>
       <h1>Splatterxl</h1>
-      <p>
-        I'm a developer. Yeah, that's it. I develop a few things you
-        <i>might</i> use, but don't.
-      </p>
-    </div>
-    <hr />
-    <nav>
-      <a href="/">Home</a> | <a href="/projects">Projects</a> |
-      <a href="/blog">Blog</a>
-    </nav>
+      <p>Someone.</p>
+    </header>
     <article>
-      <h1>Hi, I'm Splatterxl!</h1>
-      <p>
-        You may or may not have heard of me, but either way, welcome to my
-        website! Here, I plan on posting blogs (soon:tm:), interesting findings
-        about programming, and the general mayhem that is my thought process.
-        <br />
-        <br />
-        If you didn't know, I'm a teenage programmer working on a few projects
-        right now (which you can find on my
-        <a href="//github.com/nearlySplat">GitHub profile</a>), most of which
-        are <a href="//discord.com">Discord</a>-related.
-      </p>
+      <p>I do stuff. What kind of stuff? I have no idea.</p>
+      <table id="stats">
+        <tbody>
+          <tr>
+            <td id="abandoned-projects">
+              <a
+                href="//github.com/nearlySplat?tab=repositories"
+                target="_blank"
+                class="box-link"
+                ><div class="box-stuff">
+                  <p class="large-num">30+</p>
+                  <p>Abandoned Projects</p>
+                </div></a
+              >
+            </td>
+            <td>
+              <a
+                href="//en.wikipedia.org/wiki/The_Twelve_Days_of_Christmas_(song)"
+                target="_blank"
+                class="box-link"
+                ><div class="box-stuff">
+                  <p class="large-num">1</p>
+                  <p>Partridge in a Pear Tree</p>
+                </div></a
+              >
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </article>
   </body>
 </html>
