add link to keys

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <h1>Splatterxl</h1>
       <p>Hobbyist programmer. Sometimes smart.</p>
     </header>
-    <nav>
-      Go to... <a href="/blog" class=special>Blog</a>
-    </nav>
+    <nav><i>
+      Go to... <a href="/blog" class=special>Blog</a> | <a href="/keys" class="special">Security</a>
+    </i></nav>
     <article>
       <p>
       Hi! 👋
