--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <p>Hobbyist programmer. Sometimes smart.</p>
     </header>
     <nav><i>
-      Go to... <a href="/blog" class=special>Blog</a> | <a href="/keys" class="special">Security</a>
+      Go to... <a href="/blog" class=special>Blog</a> | <a href="/keys/index.md" class="special">Security</a>
     </i></nav>
     <article>
       <p>
