--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
       <p>Hobbyist programmer. Sometimes smart.</p>
     </header>
     <nav><i>
-      Go to... <a href="/blog" class=special>Blog</a> | <a href="/keys/index.md" class="special">Security</a>
+      Go to... <a href="/blog" class=special>Blog</a> | <a href="/keys/" class="special">Security</a>
     </i></nav>
     <article>
       <p>
       Hi! 👋
       <br><br>
       I'm Splatterxl (but friends call me <i class="accent">Splat</i> or <i class="accent">Splatter</i>) programmer (<i>NOT 'coder'</i>) who dabbles in
-        <a href="//github.com/nearlySplat/qsh" target="_blank"
+        <a href="//github.com/nearlySplat/qlang" target="_blank"
           >language design</a
         >,
-        <a href="//github.com/lightbulb-bot" target="_blank"
+        <a href="//github.com/lightbulb-bot/lightbulb" target="_blank"
           >Discord bot development</a
         >, and a whole lot of
         <a href="//github.com/nearlySplat" target="_blank">other stuff</a>. My current focus is <a href="#source">this website</a>, my bot <a href="//github.com/lightbulb-bot/lightbulb" target="_blank">Lightbulb 💡</a> and a few other small projects.
@@ -39,7 +39,7 @@
       </p>
     </article>
     <footer>
-      Copyright (C) 2021, Splatterxl. Emoji not by <a href="//twemoji.twitter.com">Twemoji</a> because it didn't want to work.
+      Copyright (C) 2021, Splatterxl.
     </footer>
     <!-- <script src="/assets/js/global.js"></script> -->
   </body>
