--- a/index.html
+++ b/index.html
@@ -1,49 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Splatterxl's Website</title>
+    <title>:: Splatterxl ::</title>
 
     <link rel="stylesheet" href="/assets/css/global.css" />
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/ellekasai/twemoji-awesome/gh-pages/twemoji-awesome.css">
+    <!-- <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script> -->
   </head>
   <body>
     <header>
       <h1>Splatterxl</h1>
-      <p>Someone.</p>
+      <p>Hobbyist programmer. Sometimes smart.</p>
     </header>
+    <nav><i>
+      Go to... <a href="/blog" class=special>Blog</a> | <a href="/keys/" class="special">Security</a>
+    </i></nav>
     <article>
-      <p>I do stuff. What kind of stuff? I have no idea.</p>
-      <table id="stats">
-        <tbody>
-          <tr>
-            <td id="abandoned-projects">
-              <a
-                href="//github.com/nearlySplat?tab=repositories"
-                target="_blank"
-                class="box-link"
-                ><div class="box-stuff">
-                  <p class="large-num">30+</p>
-                  <p>Abandoned Projects</p>
-                </div></a
-              >
-            </td>
-            <td>
-              <a
-                href="//en.wikipedia.org/wiki/The_Twelve_Days_of_Christmas_(song)"
-                target="_blank"
-                class="box-link"
-                ><div class="box-stuff">
-                  <p class="large-num">1</p>
-                  <p>Partridge in a Pear Tree</p>
-                </div></a
-              >
-            </td>
-          </tr>
-        </tbody>
-      </table>
+      <p>
+      Hi! 👋
+      <br><br>
+      I'm Splatterxl (but friends call me <i class="accent">Splat</i> or <i class="accent">Splatter</i>) programmer (<i>NOT 'coder'</i>) who dabbles in
+        <a href="//github.com/nearlySplat/qlang" target="_blank"
+          >language design</a
+        >,
+        <a href="//github.com/lightbulb-bot/lightbulb" target="_blank"
+          >Discord bot development</a
+        >, and a whole lot of
+        <a href="//github.com/nearlySplat" target="_blank">other stuff</a>. My current focus is <a href="#source">this website</a>, my bot <a href="//github.com/lightbulb-bot/lightbulb" target="_blank">Lightbulb 💡</a> and a few other small projects.
+        <br><br>
+        I reside in [redacted], [redacted], which is honestly the most beautiful place on earth.
+        <br><br>
+        That's all, peace out! 🕊
+        <br><br>
+        - Splatterxl, 2021
+      </p>
     </article>
+    <footer>
+      Copyright (C) 2021, Splatterxl.
+    </footer>
+    <!-- <script src="/assets/js/global.js"></script> -->
   </body>
 </html>
