--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>:: Splatterxl ::</title>
 
     <link rel="stylesheet" href="/assets/css/global.css" />
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/ellekasai/twemoji-awesome/gh-pages/twemoji-awesome.css">
+    <link
+      rel="stylesheet"
+      href="https://raw.githubusercontent.com/ellekasai/twemoji-awesome/gh-pages/twemoji-awesome.css"
+    />
     <!-- <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script> -->
   </head>
   <body>
@@ -15,32 +18,25 @@
       <h1>Splatterxl</h1>
       <p>Hobbyist programmer. Sometimes smart.</p>
     </header>
-    <nav><i>
-      Go to... <a href="/blog" class=special>Blog</a> | <a href="/keys/" class="special">Security</a>
-    </i></nav>
     <article>
-      <p>
-      Hi! 👋
-      <br><br>
-      I'm Splatterxl (but friends call me <i class="accent">Splat</i> or <i class="accent">Splatter</i>) programmer (<i>NOT 'coder'</i>) who dabbles in
-        <a href="//github.com/nearlySplat/qlang" target="_blank"
-          >language design</a
-        >,
-        <a href="//github.com/lightbulb-bot/lightbulb" target="_blank"
-          >Discord bot development</a
-        >, and a whole lot of
-        <a href="//github.com/nearlySplat" target="_blank">other stuff</a>. My current focus is <a href="#source">this website</a>, my bot <a href="//github.com/lightbulb-bot/lightbulb" target="_blank">Lightbulb 💡</a> and a few other small projects.
-        <br><br>
-        I reside in [redacted], [redacted], which is honestly the most beautiful place on earth.
-        <br><br>
-        That's all, peace out! 🕊
-        <br><br>
-        - Splatterxl, 2021
-      </p>
+      <h2>Index</h2>
+      <p>Welcome to my website! Here are a few useful links:</p>
+      <ul>
+        <li>
+          <a href="/about" class="special">About me</a>: Who am I, really?
+        </li>
+        <li>
+          <a href="/keys" class="special">Verify my identity</a>: If you're ever
+          in doubt of who're talking to, refer to this.
+        </li>
+        <li>
+          <a href="/contact" class="special">Contact me</a>: If you're ever in a
+          pinch, if you need help, or if you just want to pop in and say hi,
+          here's how you can do it.
+        </li>
+      </ul>
     </article>
-    <footer>
-      Copyright (C) 2021, Splatterxl.
-    </footer>
+    <footer>Copyright (C) 2021, Splatterxl.</footer>
     <!-- <script src="/assets/js/global.js"></script> -->
   </body>
 </html>
