--- a/index.html
+++ b/index.html
@@ -14,29 +14,8 @@
     <!-- <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script> -->
   </head>
   <body>
-    <header>
-      <h1>Splatterxl</h1>
-      <p>Hobbyist programmer. Sometimes smart.</p>
-    </header>
-    <article>
-      <h2>Index</h2>
-      <p>Welcome to my website! Here are a few useful links:</p>
-      <ul>
-        <li>
-          <a href="/about" class="special">About me</a>: Who am I, really?
-        </li>
-        <li>
-          <a href="/keys" class="special">Verify my identity</a>: If you're ever
-          in doubt of who're talking to, refer to this.
-        </li>
-        <li>
-          <a href="/contact" class="special">Contact me</a>: If you're ever in a
-          pinch, if you need help, or if you just want to pop in and say hi,
-          here's how you can do it.
-        </li>
-      </ul>
-    </article>
+    <h1>Splatterxl</h1>
+    <p>Human by nature, recreationally stupid.</p>
     <footer>Copyright (C) 2021, Splatterxl.</footer>
-    <!-- <script src="/assets/js/global.js"></script> -->
   </body>
 </html>
