rewrite homepage because why not

--- a/index.html
+++ b/index.html
@@ -7,15 +7,29 @@
     <title>:: Splatterxl ::</title>
 
     <link rel="stylesheet" href="/assets/css/global.css" />
-    <link
-      rel="stylesheet"
-      href="https://raw.githubusercontent.com/ellekasai/twemoji-awesome/gh-pages/twemoji-awesome.css"
-    />
-    <!-- <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script> -->
+    <link rel="stylesheet" href="/assets/css/home.css" />
   </head>
+
   <body>
-    <h1>Splatterxl</h1>
-    <p>Human by nature, recreationally stupid.</p>
-    <footer>Copyright (C) 2021, Splatterxl.</footer>
+    <article>
+      <h1>Splatterxl</h1>
+      <img
+        src="https://cdn.discordapp.com/avatars/728342296696979526/f5762ed08ad8e0d7a1995f73422a1345.png?size=64"
+        alt="splatterxl"
+      />
+      <p>I'm sometimes smart. Mostly not, though.</p>
+      <!-- Links, TODO: get icons so it doesn't look like shit -->
+      <div id="links">
+        <a
+          onClick="alert('Contact me at \0spla\0tterxl\0[@\0]outloo\0k[.]i\0e.');"
+          href="#"
+          >Email me</a
+        >
+        | <a href="//discord.gg/dSYshnSeW7" target="_blank">Discord</a> |
+        <a href="//github.com/splatterxl" target="_blank">GitHub</a> |
+        <a href="/keys/">Security</a>
+        <!-- <a href="//twitter.com/splatterxlisdum" target="_blank">Twitter</a> | -->
+      </div>
+    </article>
   </body>
 </html>
