--- a/keys/index.html
+++ b/keys/index.html
@@ -7,52 +7,14 @@
     <title>:: Splatterxl ::</title>
 
     <link rel="stylesheet" href="/assets/css/global.css" />
-    <link
-      rel="stylesheet"
-      href="https://raw.githubusercontent.com/ellekasai/twemoji-awesome/gh-pages/twemoji-awesome.css"
-    />
-    <!-- <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script> -->
+    <link rel="stylesheet" href="/assets/css/keys.css" />
   </head>
   <body>
-    <header>
-      <h1>Are you really Splatterxl?</h1>
-      <p>
-        If you ever find yourself asking this question, here's your reference.
-      </p>
-    </header>
     <article>
-      <p>To verify my identity, a few methods can be used.</p>
-
-      <h2>Discord</h2>
-      <p>
-        If you're talking to me on Discord, there's not really much ways to make
-        sure it's me. However, you can check if my <i>tag</i> is exactly the
-        following: <code>Splatterxl#8999</code>. If you're still not sure, check
-        if my <i>ID</i> is <code>728342296696979526</code>. Otherwise, whoever
-        you're talking to isn't me.
-      </p>
-
-      <h2 id="pgp">Git/PGP</h2>
-      <p>
-        For important messages and Git commits, I will always either sign or
-        encrypt them with my PGP key. To verify those signatures, you may
-        download my <a href="./pub.asc">public key</a>.
-      </p>
-
-      <h2>Matrix</h2>
-      <p>
-        I will only ever communicate on Matrix using the
-        <a href="//awau.uk">awau.uk</a> homeserver. My username is as follows:
-        <code>@splatterxl:awau.uk</code>
-      </p>
-
-      <h2>Email</h2>
-      <p>
-        All emails from me will be encrypted using my PGP key. See
-        <a href="#pgp">my PGP key</a> for details.
-      </p>
+      <h1>Security</h1>
+      <ul>
+        <li><a href="./pub.asc">PGP public key</a></li>
+      </ul>
     </article>
-    <footer>Copyright (C) 2021, Splatterxl.</footer>
-    <!-- <script src="/assets/js/global.js"></script> -->
   </body>
 </html>
