--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
 
     <link rel="stylesheet" href="/assets/css/global.css" />
     <link rel="stylesheet" href="/assets/css/home.css" />
+
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@Splatterxl">
+  <meta name="twitter:description" content="Hi! I'm Splatterxl, a Rust, TypeScript and JavaScript developer with lots of dead projects. Check me and my projects out here! <(￣︶￣)>">
+  <meta name="twitter:title" content=":: Splatterxl ::">
+  <meta name="twitter:image" content="">
+
+  <meta property="og:title" content=":: Splatterxl ::">
+  <meta property="og:site_name" content="splatterxl.github.io">
+  <meta property="og:url" content="https://splatterxl.github.io">
+  <meta property="og:description" content="Hi! I'm Splatterxl, a Rust, TypeScript and JavaScript developer with lots of dead projects. Check out me and my projects here! (人 •͈ᴗ•͈)">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="">
+
   </head>
 
   <body>
