--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     <article>
       <h1>Splatterxl</h1>
       <img
-        src="https://cdn.discordapp.com/avatars/728342296696979526/f5762ed08ad8e0d7a1995f73422a1345.png?size=64"
+        src="https://avatars.githubusercontent.com/u/67709748"
+        width=64
+        height=64
         alt="splatterxl"
       />
       <p>I'm sometimes smart. Mostly not, though.</p>
